--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <div class="card back">
             <div class="journey-steps" id="journeySteps">
-                <div class="step">
-                    <h3>Step 1: Memories</h3>
+                <div>
+                    <h3> The Memories</h3>
                     <p>Remember our first laugh together?</p>
                 </div>
                 <div class="step">
