--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                     <h3> The Memories</h3>
                     <p>Remember our first laugh together?</p>
                 </div>
-                <div class="step">
-                    <h3>Step 2: Connection</h3>
+                <div>
+                    <h3>  Connection</h3>
                     <p>The moments that brought us closer</p>
                 </div>
-                <div class="step">
-                    <h3>Step 3: Feelings</h3>
+                <div>
+                    <h3> Feelings</h3>
                     <p>A bond that grows stronger each day</p>
                 </div>
-                <div class="step">
+                <div>
                     <h3>The Question</h3>
                     <p>TOLU, will you be my Valentine?</p>
                     <div class="button-group">
