--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p>A bond that grows stronger each day</p>
                 </div>
                 <div>
-                    <h3>The Question</h3>
+                    <h3> Question</h3>
                     <p>TOLU, will you be my Valentine?</p>
                     <div class="button-group">
                         <button id="yesBtn" class="btn btn-yes">Yes</button>
