--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h2>A Special Invitation for TOLU</h2>
             <p>Tap to reveal a journey of love</p>
         </div>
-        <div class="card back">
+        <div class="card back"> </div>
             
                 <div>
-                    <h3>Step 1: Memories</h3>
+                    <h3> The Memories</h3>
                     <p>Remember our first laugh together?</p>
                 </div>
                 <div>
