--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>A Special Invitation for TOLU</h2>
             <p>Tap to reveal a journey of love</p>
         </div>
-        <div class="card back"> </div>
+        <div class="card back"> 
             
                 <div>
                     <h3> The Memories</h3>
