--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
             <h2>A Special Invitation for TOLU</h2>
             <p>Tap to reveal a journey of love</p>
         </div>
-        <div class="card back"> 
-            
-                <div>
-                    <h3> The Memories</h3>
+        <div class="card back">
+            <div class="journey-steps" id="journeySteps">
+                <div class="step">
+                    <h3>Step 1: Memories</h3>
                     <p>Remember our first laugh together?</p>
                 </div>
-                <div>
-                    <h3> The Connection</h3>
+                <div class="step">
+                    <h3>Step 2: Connection</h3>
                     <p>The moments that brought us closer</p>
                 </div>
-                <div>
-                    <h3> Feelings</h3>
+                <div class="step">
+                    <h3>Step 3: Feelings</h3>
                     <p>A bond that grows stronger each day</p>
                 </div>
-                <div>
+                <div class="step">
                     <h3>The Question</h3>
                     <p>TOLU, will you be my Valentine?</p>
                     <div class="button-group">
